# RoboRouter

./: .gitignore  .pre-commit-config.yaml  README.md  RELEASE_NOTES.md  docker-compose.yml  dvc.yaml  mypy.ini  pyproject.toml  requirements-dev.txt
apps/api/: Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: cli.py  config.py  db.py  deps.py  main.py  mlflow_stub.py  models.py  observability.py  otel.py  schemas.py
apps/api/app/auth/: oidc.py
apps/api/app/exporters/: base.py  exporters.py
apps/api/app/orchestrator/: langgraph_orch.py  ray_orch.py  stub.py
apps/api/app/pipeline/: change_detection.py  change_learned.py  kpconv.py  pdal.py  registration.py  segmentation.py
apps/api/app/policy/: opa.py
apps/api/app/report/: builder.py  why.py
apps/api/app/routers/: admin.py  artifacts.py  auth.py  config.py  export.py  gates.py  ingest.py  models.py  navigation.py  pipeline.py  policy.py  report.py  runs.py  scene.py  stats.py  upload.py
apps/api/app/storage/: minio_client.py  utils.py
apps/api/app/utils/: change.py  crs.py  decision_log.py  hash.py  math.py  settings_override.py  sign.py  thresholds.py  tracing.py
configs/: classes.yaml  crs_profiles.yaml  thresholds.yaml
docs/: guardian_odds.md  policy_cookbook.md  runbook.md  troubleshooting.md
scripts/: airgap_prepare.sh  ci_local.sh  dvc_setup.sh  pipeline.py  policy_seed.py  sbom.sh  seed_samples.py  smoke_run.py
tests/: test_api_basic.py  test_api_meta_runs.py  test_api_nav_export.py  test_api_pipeline_export.py  test_artifacts_authz.py  test_auth_admin.py  test_export_auth.py  (+9 more)
(+47 files in other folders)
